Bug 473513 - Dialog "Open many files at once" missing in Dolphin settings
Summary: Dialog "Open many files at once" missing in Dolphin settings
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.04.3
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-08-18 20:19 UTC by Henning
Modified: 2023-08-23 16:59 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Henning 2023-08-18 20:19:36 UTC
Under Dolphin settings "General-verifications" (translated) there is no option to disable the "are you sure you want to open that many files?" dialog.

Its useful, but not when you want to enqueue music into VLC.

--- Software ---
OS: Fedora Linux 38.20230818.0 (Kinoite)
KDE Plasma: 5.27.6
KDE Frameworks: 5.108.0
Qt: 5.15.10
Comment 1 Henning 2023-08-18 20:20:09 UTC
Explanation: the dialog appears when you open more than x files at once. Something around 10 I think
Comment 2 Bug Janitor Service 2023-08-22 08:29:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/597
Comment 3 Méven Car 2023-08-23 16:59:05 UTC
Git commit 11fb9344c0fac2544479dbd7a9913eba740b74b5 by Méven Car, on behalf of Felix Ernst.
Committed on 23/08/2023 at 18:54.
Pushed by meven into branch 'master'.

Allow to not ask again confirmation when opening 5 or more files or terminal at once

M  +4    -3    src/dolphinmainwindow.cpp
M  +4    -3    src/views/dolphinview.cpp

https://invent.kde.org/system/dolphin/-/commit/11fb9344c0fac2544479dbd7a9913eba740b74b5