Allow to not ask again confirmation when opening 5 or more files or terminal at once

BUG: 473513